--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "axios": "^0.21.1",
     "filesize": "^7.0.0",
     "lodash": "^4.17.21",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1",
-    "polished": "^4.1.3",
-    "react-draggable": "^4.4.3",
-    "react-router-dom": "^5.2.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
