--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners-kit": "^1.9.1",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
